2005-04-09  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/print/print.c: quote the shell command passed to execl().
	Fixes bug #169909.

2005-04-09  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimp-tools.c (gimp_tools_register): manually hardwire
	the global font and the text option's font together. Makes the
	globally selected font persistant and fixes bug #171024.

2005-04-09  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpink.c: merged changes to the time-smoother code
	from the HEAD branch. Fixes bug #164272.

2005-04-09  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/gifload.c (GetCode): GetDataBlock returns -1 on
	error, so count should be an int, not an unsigned char. Fixes
	bug #173119.

2005-04-09  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/winicon/icosave.c: implement color counting without
	changing the image-type to RGB. A save plug-in must not change the
	image.

2005-04-08  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/winicon/icodialog.c: rewrote preview code to use
	GtkImage and pixbufs. The previous implementation was severily
	broken.

2005-04-08  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/common/gauss.c: fixed preview for zero blur radii
	(bug #173039).

2005-04-07  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* docs/gimp.1.in: fixed typos and improved explanation of parasiterc.

2005-04-07  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/widgets/gimpcolorframe.c (gimp_color_frame_update)
	* app/widgets/gimpmessagebox.c: plugged small memleaks.

	* libgimpwidgets/gimpcontroller.c: added a finalizer and free the
	allocated strings.

2005-04-05  Michael Natterer  <mitch@gimp.org>

	Merged from HEAD branch:

	* tools/pdbgen/pdb/plug_in.pdb (plugins_query): strip the menu
	strings from underlines before matching. Fixed function to not
	match all procedures twice.

	* app/pdb/plug_in_cmds.c: regenerated.
